[package]
name = "logger"
version = "0.1.0"
edition = "2021"
author  = "EduLMoraes <lmoraeseduardo@gmail.com>"
license = "MIT/Apache-2.0"
documentation = "./target/doc/src/logger/lib.rs.html"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
